--- a/index.html
+++ b/index.html
@@ -5,8 +5,60 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html">
+        <img src="" width="150" height="150" alt="Site of Sedona">
+      </a>
+      <ul class="site-navigation">
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="photos.html">Фото и видео</a></li>
+        <li><a href="map.html">Карта штата</a></li>
+        <li><a href="hotels.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1 class="visually-hidden">Site of Sedona</h1>
+    <section class="greeting">
+      <h2 class="visually-hidden">Приветствие</h2>
+      <p>WELCOME</p>
+      <p>-to the gorgeous-</p>  
+      <p>SEDONA</p> 
+      <p>"Because the Grand Canyon sucks"</p>
+    </section>
+    <section class="city-description">
+      СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!
+    </section>
+    <section class="reasons to visit">
+      <h3>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</h3>
+    </section>
+    <section class="date">
+      <p>ЗАИНТЕРЕСОВАЛИСЬ?</p>
+      <P>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</P>
+    </section>
+    <section class="hotel-search">
+      <h4>ПОИСК ГОСТИНИЦ В СЕДОНЕ</h4>
+    </section>
+  </main> 
+  <footer class="main-footer">
+    <div>
+      <a class="hashtag" href="#">#VISITSEDONA</a>
+    </div>
+    <div class="footer-social">
+     <ul>
+      <li><a class="social-button" href="#">Twitter</a></li>
+      <li><a class="social-button" href="#">Facebook</a></li>
+      <li><a class="social-button" href="#">Youtube</a></li>
+     </ul>
+    </div>
+    <p class="footer-copyright">
+      <b>WEBSITE BY</b>
+      <a class="htmlacademy-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+        <img src="" width="100" height="90" alt="html-academy">  
+      </a>
+    </p> 
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  </footer>  
   </body>
 </html>
