--- a/hotels.html
+++ b/hotels.html
@@ -25,7 +25,7 @@
             <li class="hotels-list-item">
                 <h2>AMARA RESORT & SPA</h2>
                 <p>
-                    <img src="" width="" height="" alt="">
+                    <img src="img/hotel-amarama.jpg" width="135" height="90" alt="AMARA RESORT & SPA">
                 </p>
                 <b>ГОСТИНИЦА</b>
                 <b>ОТ 4000 Р.</b>
@@ -36,7 +36,7 @@
             <li class="hotels-list-item">
                     <h2>DESERT QUAIL INN</h2>
                     <p>
-                        <img src="" width="" height="" alt="">
+                        <img src="img/hotel-desert.jpg" width="135" height="90" alt="DESERT QUAIL INN">
                     </p>
                     <b>МОТЕЛЬ</b>
                     <b>ОТ 3000 Р.</b>
@@ -47,7 +47,7 @@
             <li class="hotels-list-item">
                     <h2>VILLAS AT POCO DIABLO</h2>
                     <p>
-                        <img src="" width="" height="" alt="">
+                        <img src="img/hotel-villas.jpg" width="135" height="90" alt="VILLAS AT POCO DIABLO">
                     </p>
                     <b>АПАРТАМЕНТЫ</b>
                     <b>ОТ 2000 Р.</b>
