--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
     <h1 class="visually-hidden">Site of Sedona</h1>
     <section class="greeting">
       <h2 class="visually-hidden">Приветствие</h2>
-      <p>WELCOME</p>
-      <p>-to the gorgeous-</p>  
-      <p>SEDONA</p> 
-      <p>"Because the Grand Canyon sucks"</p>
+       <img src="" width="300" height="300" alt="WELCOME to the gorgeous SEDONA. Because the Grand Canyon sucks"> 
     </section>
     <section class="city-description">
       СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!
@@ -33,12 +30,13 @@
     <section class="reasons to visit">
       <h3>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</h3>
     </section>
-    <section class="date">
-      <p>ЗАИНТЕРЕСОВАЛИСЬ?</p>
-      <P>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</P>
-    </section>
     <section class="hotel-search">
-      <h4>ПОИСК ГОСТИНИЦ В СЕДОНЕ</h4>
+       <h4 class="visually-hidden">ПОИСК ГОСТИНИЦ В СЕДОНЕ</h4>
+       <p>ЗАИНТЕРЕСОВАЛИСЬ?</p>
+      <p>УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
+    
+      <a a class="" href="hotel-search.html">ПОИСК ГОСТИНИЦ В СЕДОНЕ</a>
+      
     </section>
   </main> 
   <footer class="main-footer">
