--- a/hotels.html
+++ b/hotels.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header class="main-header">
@@ -29,8 +32,8 @@
                 </p>
                 <b>ГОСТИНИЦА</b>
                 <b>ОТ 4000 Р.</b>
-                <a class="button-blue" href="#">ПОДРОБНЕЕ</a>
-                <a class="button-grey" href="#">ЗАБРОНИРОВАТЬ</a>
+                <a class="button button-more" href="#">ПОДРОБНЕЕ</a>
+                <a class="button button-book" href="#">ЗАБРОНИРОВАТЬ</a>
                 <b>РЕЙТИНГ: 8,5</b>
             </li>
             <li class="hotels-list-item">
@@ -40,8 +43,8 @@
                     </p>
                     <b>МОТЕЛЬ</b>
                     <b>ОТ 3000 Р.</b>
-                    <a class="button-blue" href="#">ПОДРОБНЕЕ</a>
-                    <a class="button-grey" href="#">ЗАБРОНИРОВАТЬ</a>
+                    <a class="button button-more" href="#">ПОДРОБНЕЕ</a>
+                    <a class="button button-book" href="#">ЗАБРОНИРОВАТЬ</a>
                     <b>РЕЙТИНГ: 8,9</b>
             </li>
             <li class="hotels-list-item">
@@ -51,8 +54,8 @@
                     </p>
                     <b>АПАРТАМЕНТЫ</b>
                     <b>ОТ 2000 Р.</b>
-                    <a class="button-blue" href="#">ПОДРОБНЕЕ</a>
-                    <a class="button-grey" href="#">ЗАБРОНИРОВАТЬ</a>
+                    <a class="button button-more" href="#">ПОДРОБНЕЕ</a>
+                    <a class="button button-book" href="#">ЗАБРОНИРОВАТЬ</a>
                     <b>РЕЙТИНГ: 9,2</b>
             </li>
         </ul>
