--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a class="main-header-logo" href="index.html">
         <img src="" width="150" height="150" alt="Site of Sedona">
       </a>
-      <ul class="site-navigation">
+      <ul class="site-navigation list-reset">
         <li><a href="info.html">Информация</a></li>
         <li><a href="photos.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
@@ -34,7 +34,7 @@
       <h3>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН!</h3>
     </section>
     <section class="hotel-search">
-       <h3>ЗАИНТЕРЕСОВАЛИСЬ?</h4>
+       <h3>ЗАИНТЕРЕСОВАЛИСЬ?</h3>
        <p class="hotel-search-info">УКАЖИТЕ ПРЕДПОЛАГАЕМЫЕ ДАТЫ ПОЕЗДКИ, И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
     
        <button class="button button-hotels-search" type="button">
@@ -73,7 +73,7 @@
       <a class="hashtag" href="#">#VISITSEDONA</a>
     </div>
     <div class="footer-social">
-     <ul>
+     <ul class="list-reset">
       <li><a class="social-button" href="#">Twitter</a></li>
       <li><a class="social-button" href="#">Facebook</a></li>
       <li><a class="social-button" href="#">Youtube</a></li>
