--- a/hotels.html
+++ b/hotels.html
@@ -14,10 +14,10 @@
         <img src="" width="150" height="150" alt="Site of Sedona">
       </a>
       <ul class="site-navigation list-reset">
-            <li><a href="info.html">Информация</a></li>
-            <li><a href="photos.html">Фото и видео</a></li>
-            <li><a href="map.html">Карта штата</a></li>
-            <li><a href="hotels.html">Гостиницы</a></li>
+            <li><a class="site-navigation-item" href="info.html">Информация</a></li>
+            <li><a class="site-navigation-item" href="photos.html">Фото и видео</a></li>
+            <li><a class="site-navigation-item" href="map.html">Карта штата</a></li>
+            <li><a class="site-navigation-item" href="hotels.html">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
