--- a/hotels.html
+++ b/hotels.html
@@ -33,12 +33,16 @@
             <li class="hotels-list-item">
                 <div class="hotels-list-item-wrapper">
               <div class="hotels-list-name">
+                <div>
                 <h2>AMARA RESORT & SPA</h2>
              
                 <b>ГОСТИНИЦА</b>
                 <b>ОТ 4000 Р.</b>
+                </div>
+                <div>
                 <a class="button button-more" href="#">ПОДРОБНЕЕ</a>
                 <a class="button button-book" href="#">ЗАБРОНИРОВАТЬ</a> 
+                </div>
               </div> 
                 <div class="hotels-list-picture">
                 <p>
@@ -55,11 +59,15 @@
             <li class="hotels-list-item">
                 <div class="hotels-list-item-wrapper">
                     <div class="hotels-list-name">
+                      <div>
                     <h2>DESERT QUAIL INN</h2>
                     <b>МОТЕЛЬ</b>
                     <b>ОТ 3000 Р.</b>
+                    </div>
+                    <div>
                     <a class="button button-more" href="#">ПОДРОБНЕЕ</a>
                     <a class="button button-book" href="#">ЗАБРОНИРОВАТЬ</a>
+                    </div>
                 </div>
                 <div class="hotels-list-picture">
                     <p>
@@ -74,11 +82,15 @@
             <li class="hotels-list-item">
                 <div class="hotels-list-item-wrapper">
                   <div class="hotels-list-name">
+                    <div>
                     <h2>VILLAS AT POCO DIABLO</h2>
                     <b>АПАРТАМЕНТЫ</b>
                     <b>ОТ 2000 Р.</b>
+                    </div>
+                    <div>
                     <a class="button button-more" href="#">ПОДРОБНЕЕ</a>
                     <a class="button button-book" href="#">ЗАБРОНИРОВАТЬ</a>
+                    </div>
                   </div> 
                   <div class="hotels-list-picture">
                     <p>
@@ -101,7 +113,7 @@
       <a class="hashtag" href="#">#VISITSEDONA</a>
        </div>
     <div class="footer-social">
-     <ul class="list-reset">
+     <ul class="list-reset social-button-wrapper">
       <li><a class="social-button" href="#">Twitter</a></li>
       <li><a class="social-button" href="#">Facebook</a></li>
       <li><a class="social-button" href="#">Youtube</a></li>
