--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <a class="hashtag" href="#">#VISITSEDONA</a>
     </div>
     <div class="footer-social">
-     <ul class="list-reset">
+     <ul class="list-reset social-button-wrapper">
       <li><a class="social-button" href="#">Twitter</a></li>
       <li><a class="social-button" href="#">Facebook</a></li>
       <li><a class="social-button" href="#">Youtube</a></li>
