--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="content">
         <header class="main-header main-header-index">
             <div class="main-header-wrapper">
-                <a class="main-header-logo" href="index.html">
-                    <img src="img/logo-sedona.png" width="140" height="71" alt="Site of Sedona">
-                </a>
+
+                <img class="main-header-logo" src="img/logo-sedona.png" width="140" height="71" alt="Site of Sedona">
+
                 <nav class="main-navigation container">
                     <ul class="site-navigation list-reset ">
                         <li>
@@ -32,6 +32,7 @@
                         <li>
                             <div class="site-navigation-item site-navigation-right"><a class="item site-item-right" href="hotels.html">Гостиницы</a></div>
                         </li>
+
                     </ul>
                 </nav>
             </div>
@@ -174,7 +175,7 @@
                                     </label>
                                 </div>
                                 <div><button class="button-sign button-minus" type="button"></button></div>
-                                <input class="form-input form-input-number" id="adults" type="text" name="adults-number" value="" placeholder="2">
+                                <input class="form-input form-input-number form-input-number-adults" id="adults" type="text" name="adults-number" value="" placeholder="2">
                                 <div><button class="button-sign button-plus" type="button"></button></div>
                             </div>
                             <div class="input-numbers-row">
@@ -185,7 +186,7 @@
                                     </label>
                                 </div>
                                 <div><button class="button-sign button-minus" type="button"></button></div>
-                                <input class="form-input form-input-number" id="children" type="text" name="children-number" value="" placeholder="0">
+                                <input class="form-input form-input-number form-input-number-children" id="children" type="text" name="children-number" value="" placeholder="0">
                                 <div><button class="button-sign button-plus" type="button"></button></div>
                             </div>
                         </div>
